Bug found on firefox screen 1980x1080, will mention in readme

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1, h3 {
 hr {
     border-top: 1px outset #888E8E;
     width: 100%;
-    margin: 5px 0;
+    margin: 5px 0 0;
 }
 #logo {
     float: left;
@@ -322,8 +322,8 @@ form > h2 {
     }
     .reviews {
         width: 100%;
-        font-size: 35px;
         padding: 25px 0 25px 0;
+        position: inherit;
      }
     .biography {
         padding: 30px 0;
